refactor: dto record로 변경